minus fontAwesome script + fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="form">
                 <button class="createMsgBtn button is-success is-light">
-                    <a class="link" href="./index.html">Create your own message</a>
+                    <a class="" href="./index.html">Create your own message</a>
                 </button>
             </div>
 
@@ -33,7 +33,6 @@
     </div>
 
 
-    <script src="https://kit.fontawesome.com/c402b8c651.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 </html>
